@@ -1,4 +1,4 @@
-/* $Id: ttkNotebook.c,v 1.16 2008/11/09 23:53:09 jenglish Exp $
+/* $Id: ttkNotebook.c,v 1.17 2009/01/11 08:40:19 jenglish Exp $
  * Copyright (c) 2004, Joe English
  */
 
@@ -1239,9 +1239,6 @@ static void NotebookCleanup(void *recordPtr)
     Notebook *nb = recordPtr;
 
     Ttk_DeleteManager(nb->notebook.mgr);
-    Tk_DeleteOptionTable(nb->notebook.tabOptionTable);
-    Tk_DeleteOptionTable(nb->notebook.paneOptionTable);
-
     if (nb->notebook.tabLayout)
 	Ttk_FreeLayout(nb->notebook.tabLayout);
 }
